<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ThirdFragment">

   <ImageView
       android:id="@+id/person"
       android:layout_width="30dp"
       android:layout_height="30dp"
       android:src="@drawable/ic_account"
       android:layout_marginTop="30dp"
       android:layout_marginStart="30dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       ></ImageView>
    <TextView
        android:id="@+id/YourLibraryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/person"
        app:layout_goneMarginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:text="@string/your_library"
        />

    <ImageButton
        android:id="@+id/imageButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"/>
    <ImageView
        android:id="@+id/search2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_search_24"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageButtonAdd"
        ></ImageView>
    <ImageView
        android:id="@+id/sawap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/person"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_swap"/>
    <TextView
        android:id="@+id/MostRecent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/sawap"
        app:layout_constraintTop_toBottomOf="@id/person"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/most_recent"/>
    <ImageView
        android:id="@+id/Favoritos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/sawap"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_favorito2"
        android:padding="35dp"
        android:background="@drawable/ic_baseline_square_24"
        />
    <TextView
        android:id="@+id/Liked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liked_songs"
        app:layout_constraintStart_toEndOf="@id/Favoritos"
        app:layout_constraintTop_toBottomOf="@id/sawap"
        android:layout_marginTop="35dp"
        />
    <TextView
        android:id="@+id/cont_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/Liked"
        app:layout_constraintStart_toEndOf="@id/Favoritos"/>
    <TextView
        android:id="@+id/Songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songs"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/Liked"
        app:layout_constraintStart_toEndOf="@id/cont_songs"
        />


</androidx.constraintlayout.widget.ConstraintLayout>